Changed location of promotion line.

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body {
 #promoLine {
   font-family: "Arial", sans-serif;
   font-size: 150%;
+  color: white;
   text-align: center;
 }
 #promoLinks{
